fix(createproject sections): :lipstick: it should not exist a scrollbar in y axis

--- a/components/organisms/CoaMilestones/CoaMilestonesView/coa-milestones-view.scss
+++ b/components/organisms/CoaMilestones/CoaMilestonesView/coa-milestones-view.scss
@@ -1,6 +1,7 @@
 .o-coaMilestonesContainer {
   padding-inline: 2.56rem;
   padding-block: 2.31rem;
+  overflow-x: hidden;
   &__titleContainer {
     display: flex;
     justify-content: space-between;
